--- a/kindergarten-nutrition-frontend/src/styles/background.css
+++ b/kindergarten-nutrition-frontend/src/styles/background.css
@@ -1,30 +1,15 @@
 
-.home {
-  
-  height: 100vh;   /* cao full màn hình */
-  width: 100vw;        /* rộng full màn hình */
-   background-color: #ffced2; 
-  /* fixed */
-  background-size: cover;
-  margin: 0;
-  padding: 0;
-       /* chặn tràn trong div này */
-}
 
   .home {
     position: relative;
-    height: 100vh;   /* cao full màn hình */
-    width: 100vw;        /* rộng full màn hình */
-    background-color: #ffced2; 
-
-
-    /* background-image: linear-gradient(to bottom, #fc7c87, white); */
-    /* fixed */
+    height: 100vh;   
+    width: 100vw;      
+    background-color: #ffeef1; 
     background-size: cover;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    z-index: 0;     /* chặn tràn trong div này */
+    z-index: 0;     
   }
 
   html, body {
@@ -32,6 +17,6 @@
     padding: 0;
     height: 100%;
     width: 100%;
-    overflow-x: hidden;  /* chặn thanh trượt ngang */
+    overflow-x: hidden;  
     
   }  
