--- a/kindergarten-nutrition-frontend/src/styles/WarehouseForm.css
+++ b/kindergarten-nutrition-frontend/src/styles/WarehouseForm.css
@@ -19,7 +19,7 @@
   width: 100vw;
   padding: 60px 40px 40px;
   margin: 0;
-  margin-top: 80px; /* Account for header height */
+  margin-top: 110px; /* Account for header height - updated for fixed header */
   display: flex;
   justify-content: center;
   align-items: flex-start;
