--- a/kindergarten-nutrition-frontend/src/styles/ParentCorner.css
+++ b/kindergarten-nutrition-frontend/src/styles/ParentCorner.css
@@ -17,7 +17,7 @@
   width: 100vw;
   padding: 60px 40px 40px;
   margin: 0;
-  margin-top: 80px; /* Account for header height */
+  margin-top: 130px; /* Account for header height - updated for fixed header */
   box-sizing: border-box;
 }
 
